--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "mimimimimi",
   "version": "1.0.0",
-  "main": "index.js",
   "repository": "https://github.com/sabatesduran/mimimimimi",
   "author": "Dídac Sabatés <sabatesduran@gmail.com>",
   "license": "MIT",
   "scripts": {
     "start": "parcel",
-    "build": "parcel build"
+    "build": "parcel build src/index.html"
   },
   "devDependencies": {
     "parcel": "^2.5.0"
