--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Dídac Sabatés <sabatesduran@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "parcel",
+    "start": "parcel src/index.html",
     "build": "parcel build src/index.html"
   },
   "devDependencies": {
